correccion de sintaxis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-#spring.data.mongodb.uri=mongodb://localhost:27017/guitarrasCustom
-spring.data.mongodb.uri=mongodb+srv://admin:admin@proyectos.bsqdx.mongodb.net/retofinal-guitarras?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://localhost:27017/guitarrasCustom
+#spring.data.mongodb.uri=mongodb+srv://admin:admin@proyectos.bsqdx.mongodb.net/retofinal-guitarras?retryWrites=true&w=majority
